k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  annotations:
    sidecar.jaegertracing.io/inject: jaeger
spec:
  template:
    spec:
      terminationGracePeriodSeconds: 30
      containers:
      - name: gateway
        image: eu.gcr.io/boclips-prod/boclips/gateway:1
        ports:
        - name: http
          containerPort: 5000
